--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             return document.querySelectorAll(els);
         }
     </script>
-    <script src='js/underscore.js'></script>
+    <script src='demo/js/underscore.js'></script>
 </head>
 <body>
 
@@ -26,10 +26,10 @@
 
     <hr>
 
-    <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png", "small": "images/cutedeath-small.png", "large": "images/cutedeath-large.png" }' data-alt="Death says: Die!">
+    <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "demo/images/cutedeath.png", "small": "demo/images/cutedeath-small.png", "large": "demo/images/cutedeath-large.png" }' data-alt="Death says: Die!">
 
     <p>
-        <img class='js-lazyfill' src='' alt="some text here" data-sources='{ "default": "images/spookymask.png", "small": "images/spookymask-closeup.png" }'>
+        <img class='js-lazyfill' src='' alt="some text here" data-sources='{ "default": "demo/images/spookymask.png", "small": "demo/images/spookymask-closeup.png" }'>
 
         Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy. 
     </p>
@@ -39,7 +39,7 @@
         It still works if you provide just the default media
     </p>
 
-    <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png" }' data-alt='Death says: Booored!'>
+    <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "demo/images/cutedeath.png" }' data-alt='Death says: Booored!'>
 
     <p>
         Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
@@ -52,7 +52,7 @@
         <a href='https://github.com/nobilelucifero/Lazyfill'>View on Github &rarr;</a>
     </p>
 
-    <script src='../lazyfill.js'></script>
+    <script src='demo/js/lazyfill.js'></script>
     <script>
             var lazyfill = new Lazyfill();
             // init the thing
