fix 404s for CSS files

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset='UTF-8'>
     <title>Lazyfill Demo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='css/normalizer.css'>
-    <link rel='stylesheet' href='css/main.css'>
+    <link rel='stylesheet' href='demo/css/normalizer.css'>
+    <link rel='stylesheet' href='demo/css/main.css'>
     <script>
         function $ (el) {
             el = el || document;
