--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     <script src='demo/js/lazyfill.js'></script>
     <script>
-            var lazyfill = new Lazyfill();
-            // init the thing
-            lazyfill.init();
+        // init Lazyfill
+        var lazyfill = new Lazyfill();
+        lazyfill.init();
     </script>
 
     <script>
