rewrite Lazyfill * now is just a one-shot JS file. * no need to initialize it by hand * shorter code * now compatible with IE9 * less debug infos * includes `resize` event, but does nothing is the `src` is the same

--- a/demo/index.html
+++ b/demo/index.html
@@ -17,6 +17,7 @@
         }
     </script>
     <script src='js/underscore.js'></script>
+    <script src='../lazyfill.js'></script>
 </head>
 <body>
 
@@ -50,11 +51,10 @@
         <a href='https://github.com/nobilelucifero/Lazyfill'>View on Github &rarr;</a>
     </p>
 
-    <script src='../lazyfill.js'></script>
     <script>
-            var lazyfill = new Lazyfill();
-            // init the thing
-            lazyfill.init();
+            // var lazyfill = new Lazyfill();
+            // // init the thing
+            // lazyfill.init();
     </script>
 
 </body>
