--- a/demo/index.html
+++ b/demo/index.html
@@ -21,16 +21,24 @@
 </head>
 <body>
 
-    <h1>Lazyfill Demo</h1>
+    <header class='header'>
+        <h1>Lazyfill Demo</h1>
+    </header>
 
-    <hr>
+    <article class="main">
 
     <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png", "small": "images/cutedeath-small.png", "large": "images/cutedeath-large.png" }' data-alt="Death says: Die!">
+
+    <p class='multi'>
+        Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
+        Croissant gummi bears liquorice cupcake soufflé tiramisu cake pie jelly-o. Croissant pudding donut carrot cake marzipan gummies tootsie roll. Dragée apple pie tootsie roll pudding. Chocolate cake muffin chocolate cake gummies carrot cake. Jelly beans donut candy cake wafer dragée chocolate cake sesame snaps. Ice cream chupa chups cotton candy apple pie chocolate bonbon brownie. Halvah soufflé lollipop cheesecake macaroon. Tootsie roll cake brownie gummies. Tootsie roll croissant muffin muffin chocolate bar brownie fruitcake biscuit. Caramels jelly-o dragée tiramisu gummi bears cheesecake soufflé pastry. Apple pie wafer sesame snaps jelly chocolate bar liquorice. Danish brownie pudding jelly halvah macaroon macaroon cake sesame snaps.
+    </p>
 
     <p>
         <img class='js-lazyfill' src='' alt="some text here" data-sources='{ "default": "images/spookymask.png", "small": "images/spookymask-closeup.png" }'>
 
-        Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy. 
+        Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
+        Croissant gummi bears liquorice cupcake soufflé tiramisu cake pie jelly-o. Croissant pudding donut carrot cake marzipan gummies tootsie roll. Dragée apple pie tootsie roll pudding. Chocolate cake muffin chocolate cake gummies carrot cake. Jelly beans donut candy cake wafer dragée chocolate cake sesame snaps. Ice cream chupa chups cotton candy apple pie chocolate bonbon brownie. Halvah soufflé lollipop cheesecake macaroon. Tootsie roll cake brownie gummies. Tootsie roll croissant muffin muffin chocolate bar brownie fruitcake biscuit. Caramels jelly-o dragée tiramisu gummi bears cheesecake soufflé pastry. Apple pie wafer sesame snaps jelly chocolate bar liquorice. Danish brownie pudding jelly halvah macaroon macaroon cake sesame snaps.
     </p>
 
 
@@ -45,17 +53,11 @@
         Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake.
     </p>
 
-    <hr>
+    </article>
 
-    <p>
+    <footer class='footer'>
         <a href='https://github.com/nobilelucifero/Lazyfill'>View on Github &rarr;</a>
-    </p>
-
-    <script>
-            // var lazyfill = new Lazyfill();
-            // // init the thing
-            // lazyfill.init();
-    </script>
+    </footer>
 
 </body>
 </html>
