add GA for Demo, remove some text

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,37 +16,45 @@
 
     <article class="main">
 
-    <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png", "small": "images/cutedeath-small.png", "large": "images/cutedeath-large.png" }' data-alt="Death says: Die!">
+        <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png", "small": "images/cutedeath-small.png", "large": "images/cutedeath-large.png" }' data-alt="Death says: Die!">
 
-    <p class='multi'>
-        Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
-        Croissant gummi bears liquorice cupcake soufflé tiramisu cake pie jelly-o. Croissant pudding donut carrot cake marzipan gummies tootsie roll. Dragée apple pie tootsie roll pudding. Chocolate cake muffin chocolate cake gummies carrot cake. Jelly beans donut candy cake wafer dragée chocolate cake sesame snaps. Ice cream chupa chups cotton candy apple pie chocolate bonbon brownie. Halvah soufflé lollipop cheesecake macaroon. Tootsie roll cake brownie gummies. Tootsie roll croissant muffin muffin chocolate bar brownie fruitcake biscuit. Caramels jelly-o dragée tiramisu gummi bears cheesecake soufflé pastry. Apple pie wafer sesame snaps jelly chocolate bar liquorice. Danish brownie pudding jelly halvah macaroon macaroon cake sesame snaps.
-    </p>
+        <p class='multi'>
+            Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
+        </p>
 
-    <p>
-        <img class='js-lazyfill' src='' alt="some text here" data-sources='{ "default": "images/spookymask.png", "small": "images/spookymask-closeup.png" }'>
+        <p>
+            <img class='js-lazyfill' src='' alt="some text here" data-sources='{ "default": "images/spookymask.png", "small": "images/spookymask-closeup.png" }'>
 
-        Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
-        Croissant gummi bears liquorice cupcake soufflé tiramisu cake pie jelly-o. Croissant pudding donut carrot cake marzipan gummies tootsie roll. Dragée apple pie tootsie roll pudding. Chocolate cake muffin chocolate cake gummies carrot cake. Jelly beans donut candy cake wafer dragée chocolate cake sesame snaps. Ice cream chupa chups cotton candy apple pie chocolate bonbon brownie. Halvah soufflé lollipop cheesecake macaroon. Tootsie roll cake brownie gummies. Tootsie roll croissant muffin muffin chocolate bar brownie fruitcake biscuit. Caramels jelly-o dragée tiramisu gummi bears cheesecake soufflé pastry. Apple pie wafer sesame snaps jelly chocolate bar liquorice. Danish brownie pudding jelly halvah macaroon macaroon cake sesame snaps.
-    </p>
+            Croissant gummi bears liquorice cupcake soufflé tiramisu cake pie jelly-o. Croissant pudding donut carrot cake marzipan gummies tootsie roll. Dragée apple pie tootsie roll pudding. Chocolate cake muffin chocolate cake gummies carrot cake. Jelly beans donut candy cake wafer dragée chocolate cake sesame snaps. Ice cream chupa chups cotton candy apple pie chocolate bonbon brownie. Halvah soufflé lollipop cheesecake macaroon. Tootsie roll cake brownie gummies. Tootsie roll croissant muffin muffin chocolate bar brownie fruitcake biscuit. Caramels jelly-o dragée tiramisu gummi bears cheesecake soufflé pastry. Apple pie wafer sesame snaps jelly chocolate bar liquorice. Danish brownie pudding jelly halvah macaroon macaroon cake sesame snaps.
+        </p>
 
 
-    <p>
-        It still works if you provide just the default media
-    </p>
+        <p>
+            It still works if you provide just the default media
+        </p>
 
-    <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png" }' data-alt='Death says: Booored!'>
+        <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png" }' data-alt='Death says: Booored!'>
 
-    <p>
-        Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
-        Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake.
-    </p>
+        <p>
+            Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
+            Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake.
+        </p>
 
     </article>
 
     <footer class='footer'>
         <a href='https://github.com/nobilelucifero/Lazyfill'>View on Github &rarr;</a>
     </footer>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-45962970-1', 'nobilelucifero.github.io');
+        ga('send', 'pageview');
+    </script>
 
 </body>
 </html>
