--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset='UTF-8'>
     <title>Lazyfill Demo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='css/normalizer.css'>
-    <link rel='stylesheet' href='css/main.css'>
-    <script src='../lazyfill.js'></script>
+    <link rel='stylesheet' href='demo/css/normalizer.css'>
+    <link rel='stylesheet' href='demo/css/main.css'>
+    <script src='lazyfill.js'></script>
 </head>
 <body>
 
@@ -16,14 +16,14 @@
 
     <article class="main">
 
-        <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png", "small": "images/cutedeath-small.png", "large": "images/cutedeath-large.png" }' data-alt="Death says: Die!">
+        <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "demo/images/cutedeath.png", "small": "demo/images/cutedeath-small.png", "large": "demo/images/cutedeath-large.png" }' data-alt="Death says: Die!">
 
         <p class='multi'>
             Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake. Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
         </p>
 
         <p>
-            <img class='js-lazyfill' src='' alt="some text here" data-sources='{ "default": "images/spookymask.png", "small": "images/spookymask-closeup.png" }'>
+            <img class='js-lazyfill' src='' alt="some text here" data-sources='{ "default": "demo/images/spookymask.png", "small": "demo/images/spookymask-closeup.png" }'>
 
             Croissant gummi bears liquorice cupcake soufflé tiramisu cake pie jelly-o. Croissant pudding donut carrot cake marzipan gummies tootsie roll. Dragée apple pie tootsie roll pudding. Chocolate cake muffin chocolate cake gummies carrot cake. Jelly beans donut candy cake wafer dragée chocolate cake sesame snaps. Ice cream chupa chups cotton candy apple pie chocolate bonbon brownie. Halvah soufflé lollipop cheesecake macaroon. Tootsie roll cake brownie gummies. Tootsie roll croissant muffin muffin chocolate bar brownie fruitcake biscuit. Caramels jelly-o dragée tiramisu gummi bears cheesecake soufflé pastry. Apple pie wafer sesame snaps jelly chocolate bar liquorice. Danish brownie pudding jelly halvah macaroon macaroon cake sesame snaps.
         </p>
@@ -33,7 +33,7 @@
             It still works if you provide just the default media
         </p>
 
-        <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "images/cutedeath.png" }' data-alt='Death says: Booored!'>
+        <img class='js-lazyfill' src='' alt='' data-sources='{ "default": "demo/images/cutedeath.png" }' data-alt='Death says: Booored!'>
 
         <p>
             Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
