add meta tags to demo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset='UTF-8'>
     <title>Lazyfill Demo</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="author" content="Lucifero Von Nachtosphere">
+    <meta name="description" content="A simple, experimental, solution to handle responsive images">
     <link rel='stylesheet' href='demo/css/normalizer.css'>
     <link rel='stylesheet' href='demo/css/main.css'>
     <script src='lazyfill.js'></script>
@@ -39,6 +41,8 @@
             Dessert fruitcake ice cream lollipop tiramisu toffee chupa chups tootsie roll jelly beans. Wafer marzipan cupcake lollipop pudding liquorice oat cake pie candy.
             Cookie carrot cake marzipan halvah marzipan candy candy sweet roll ice cream. Icing jelly-o jelly oat cake macaroon icing. Chocolate cake soufflé lollipop topping pie dragée fruitcake.
         </p>
+
+        <!-- <p>A project by <a href="https://plus.google.com/107797914019344539644?rel=author">Lucifero Von Nachtosphere</a></p> -->
 
     </article>
 
