update title of demo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class='header'>
-        <h1>Lazyfill Demo</h1>
+        <h1>Lazyfill</h1>
     </header>
 
     <article class="main">
